Fri Feb  9 21:40:02 UTC 2007  Krishnakumar B  <kitty@nospam.invalid.domain>

        * ace/High_Res_Timer.inl:
        * ace/High_Res_Timer.cpp:

          Removed ACE_WIN32 specific code in ACE_High_Res_Timer to reflect
          the change in the default value of ACE_HR_SCALE_CONVERSION.
          Removed uses of ACE_HRTIME_CONVERSION and use
          ACE_Utils::Truncate instead.

        * ace/OS_NS_time.h:

          Changed the check for defining ACE_HRTIME_CONVERSION and
          ACE_HRTIME_TO_U64 from ACE_HRTIME_T_IS_BASIC_TYPE to
          ACE_LACKS_UNSIGNEDLONGLONG_T.

        * tests/High_Res_Timer_Test.cpp:

          Updated the test to use ACE_Utils::Truncate instead of
          static_cast which caused 0 to be output when time_t is 64-bit.

Fri Feb  9 12:19:57 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * bin/rm_exception_macros.pl:

          Fixed a bug where the end of the ACE_THROW_SPEC would not be
          recognized.

Thu Feb  8 23:09:59 UTC 2007  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * examples/Logger/Acceptor-server/server_loggerd.cpp (handle_input):
        * examples/Logger/simple-server/Logging_Handler.cpp (handle_input):
        * examples/Logger/client/logging_app.cpp (ACE_TMAIN): Fixed these
          programs to use the proper (new) formatting for ACE_Log_Record.
          Thanks to Mouna Seri <seri at crhc dot uiuc dot edu> for
          reporting this.

Thu Feb  8 19:40:30 UTC 2007  Steve Huston  <shuston@riverace.com>

        * ace/Makefile.am:
        * ace/ace.mpc:
        * ace/Time_Request_Reply.{h cpp}:
        * netsvcs/lib/Makefile.am:
        * netsvcs/lib/lib.mpc:
        * netsvcs/lib/Time_Request_Reply.{h cpp}: Moved Time_Request_Reply
          from ace to netsvcs; it's only used from netsvcs and is only useful
          as an example of some ACE usage. Real time synch needs should be
          met using NTP.

        * ace/Name_Request_Reply.{h cpp}: Changed the sec_timeout_ transfer